<resources>
    <string name="app_name">Workout Tracker</string>

<!--    to be changed to include a variable read from the data lists    -->
    <string name="welcome_message">Hey Champion!</string>

<!--    Home screen cards labels-->
    <string name="add_exercise">Add New Exercise"</string>
    <string name="workout_history">Workout History</string>
    <string name="today_label">Today</string>
    <string name="last_day_label">Yesterday</string> <!-- placeholder for last day -->
<!--    PLACEHOLDERS -->
    <string name="exercise_name_1">Gym</string>
    <string name="exercise_name_2">Cycling</string>
    <string name="exercise_name_3">Walking</string>"
    <string name="time">%s min</string>
    <string name="distance">%s km</string>
    <string name="weight">%s kg</string>


<!--    Profile Screen -->


<!--    Achievements card labels-->
    <string name="achievements_label">Your Achievements!</string>
    <string name="achievement_title_most_time_week">Most time spent on training in a week:</string>
    <string name="achievement_title_greatest_weight_lifted_week">Greatest weight lifted during training in a week:</string>
    <string name="achievement_title_most_sessions_week">Most sessions done in a week:</string>
    <string name="achievement_title_favourite_exercise">Favourite exercise:</string>
    <string name="achievement_title_longest_walk">Longest distance walked:</string>
    <string name="achievement_title_longest_cycling">Longest distance ridden:</string>"

<!--  Bottom navigation bar labels  -->
    <string name="bottom_navBar_home">Home</string>
    <string name="bottom_navBar_today">Today</string>
    <string name="bottom_navBar_routines">Routines</string>
    <string name="bottom_navBar_calendar">Calendar</string>
    <string name="bottom_navBar_profile">Profile</string>
    <string name="bottom_navBar_settings">Settings</string>
    <string name="bottom_navBar_exercisesList">Exercises</string>
</resources>